# БР1.2/Христофоров Владислав/labs/lab1/src/docs/openapi.yaml
@@ -408,6 +408,12 @@ paths:
             parameters:
                 - $ref: '#/components/parameters/QueryLimit'
                 - $ref: '#/components/parameters/QueryOffset'
+                - name: author_id
+                  in: query
+                  description: Фильтр по автору (для получения постов конкретного кулинара)
+                  schema:
+                      type: string
+                      format: uuid
             responses:
                 '200':
                     description: Список постов
